<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:padding="6dp"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_person"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:src="@drawable/person_add_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/baseline_error_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/email_24"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/white"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/baseline_error_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/phone"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/phone_iphone_24"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="9"
                app:prefixText="@string/countryCode"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/baseline_error_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="9"
                    android:minLines="9"
                    android:inputType="number"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/male"
                    android:textSize="20sp"
                    android:checked="true"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white"
                    android:text="@string/female"
                    android:textSize="20sp" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/white"
                android:hint="@string/birthdate"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/btnSubmit"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:background="@drawable/gradient_button"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>